1.9.9.dev0
 * #981: Fix "spot" check file count delta error.
 * #982: Fix for borgmatic "exclude_patterns" and "exclude_from" recursing into excluded
   subdirectories.

1.9.8
 * #979: Fix root patterns so they don't have an invalid "sh:" prefix before getting passed to Borg.
 * Expand the recent contributors documentation section to include ticket submitters—not just code
   contributors—because there are multiple ways to contribute to the project! See:
   https://torsion.org/borgmatic/#recent-contributors

1.9.7
 * #855: Add a Sentry monitoring hook. See the documentation for more information:
   https://torsion.org/borgmatic/docs/how-to/monitor-your-backups/#sentry-hook
 * #968: Fix for a "spot" check error when a filename in the most recent archive contains a newline.
 * #970: Fix for an error when there's a blank line in the configured patterns or excludes.
 * #971: Fix for "exclude_from" files being completely ignored.
 * #977: Fix for "exclude_patterns" and "exclude_from" not supporting explicit pattern styles (e.g.,
   "sh:" or "re:").

1.9.6
 * #959: Fix an error in the Btrfs hook when a subvolume mounted at "/" is configured in borgmatic's
   source directories.
 * #960: Fix for archives storing relative source directory paths such that they contain the working
   directory.
 * #960: Fix the "spot" check to support relative source directory paths.
 * #962: For the ZFS, Btrfs, and LVM hooks, perform path rewriting for excludes and patterns in
   addition to the existing source directories rewriting.
 * #962: Under the hood, merge all configured source directories, excludes, and patterns into a
   unified temporary patterns file for passing to Borg. The borgmatic configuration options remain
   unchanged.
 * #962: For the LVM hook, add support for nested logical volumes.
 * #965: Fix a borgmatic runtime directory error when running the "spot" check with a database hook
   enabled.